Added a process to monitor and reset the mag value

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,9 @@ platform = raspberrypi
 board = adafruit_qtpy
 framework = arduino
 
+board_build.f_cpu = 64000000L
+; board_build.f_cpu = 133000000L
+
 ; Use zip to reduce framework fetch time
 platform_packages =
     framework-arduinopico@https://github.com/earlephilhower/arduino-pico/releases/download/3.3.2/rp2040-3.3.2.zip
